
0.7
- initial version

0.8
- added level 2
- updated for Android SDK 4 
- use dp instead of px to support different display sizes 
- sound off as default
- known issues:
  - no menu on devices without menu button
  - level 2 solution bug
  
0.9 
- action bar support, changed minSdkVersion 7 -> 11 
  - requires min android version 3.x
- using Holo theme
- allow installation on external sd card
- fix: level 2 solution
- known issues:
  - if piece is moved directly after previous move, sound is not played 

1.0
- shorter move sound
- added level 3
 
1.0.1
- fixed board exit of level 3

1.1
- added level selection and instruction activity
- added level 0 and level 4

1.2
- added level 5 and level 6