@@ -197,18 +197,19 @@ public final class R {
         public static final int Piece12_4=0x7f090020;
         public static final int Piece21=0x7f090021;
         public static final int Piece22=0x7f090022;
-        public static final int button_instructions=0x7f090088;
-        public static final int button_level_selection=0x7f090089;
+        public static final int button_instructions=0x7f090089;
+        public static final int button_level_selection=0x7f09008a;
         public static final int instruction_list_details_text=0x7f090002;
         public static final int lblListHeader=0x7f090003;
+        public static final int level_selection_row_best=0x7f090087;
         public static final int level_selection_row_text=0x7f090086;
-        public static final int level_selection_row_text_details=0x7f090087;
+        public static final int level_selection_row_text_details=0x7f090088;
         public static final int listview_instructions=0x7f090000;
         public static final int listview_level_selection=0x7f090001;
-        public static final int opt_about=0x7f09008d;
-        public static final int opt_finish=0x7f09008c;
-        public static final int opt_restart=0x7f09008a;
-        public static final int opt_sound=0x7f09008b;
+        public static final int opt_about=0x7f09008e;
+        public static final int opt_finish=0x7f09008d;
+        public static final int opt_restart=0x7f09008b;
+        public static final int opt_sound=0x7f09008c;
         public static final int txt_best_solution=0x7f090016;
         public static final int txt_best_solution0=0x7f090006;
         public static final int txt_best_solution2=0x7f090025;
