@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical" >
+    android:paddingTop="@dimen/activity_vertical_margin">
 
 <TextView
     android:id="@+id/level_selection_row_text"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="fill_parent"
+    android:layout_alignParentLeft="true" 
+    android:background="@color/level_selection_first_background"
+    android:paddingBottom="5dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
+    android:singleLine="true"
+    android:textColor="@drawable/level_selection_selectable"
+    android:textStyle="bold"
+    android:textSize="20sp" />
+
+<TextView
+    android:id="@+id/level_selection_row_best"
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
+    android:layout_alignParentRight="true" 
+    android:layout_toRightOf="@id/level_selection_row_text"
+    android:gravity="right"  
     android:background="@color/level_selection_first_background"
     android:paddingBottom="5dp"
     android:paddingLeft="5dp"
@@ -23,6 +40,7 @@
     android:id="@+id/level_selection_row_text_details"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_below="@id/level_selection_row_text"    
     android:background="@color/level_selection_details_background"
     android:paddingBottom="0dp"
     android:paddingLeft="5dp"
@@ -33,4 +51,4 @@
     android:textColor="@color/level_selection_details_text"
     android:textSize="14sp" />
 
-</LinearLayout>
+</RelativeLayout>
