@@ -16,7 +16,7 @@ public class Level0Activity extends GameActivity {
 
 	public static final int EXIT_RETURN_CODE = 4710;
 
-	private static final String PROP_BEST = "best0"; // property where to store best solution of Level 0
+	public static final String PROP_BEST = "best0"; // property where to store best solution of Level 0
 
 	private static final String PROP_MOVES = "moves0"; // property where to store current moves of Level 0
 
@@ -121,7 +121,7 @@ public class Level0Activity extends GameActivity {
 		if (!_props.containsKey(PROP_BEST)) {
 			// property entry doesn't exist yet, create it
 			_props.setProperty(PROP_BEST, "---");
-			saveProperties();
+			PropertiesHandler.saveProperties(this, _props);
 		}
 		showBestSolution();
 
