@@ -12,7 +12,7 @@ public class Level1Activity extends GameActivity {
 
 	public static final int EXIT_RETURN_CODE = 4711;
 
-	private static final String PROP_BEST = "best"; // property where to store best solution of Level 1
+	public static final String PROP_BEST = "best"; // property where to store best solution of Level 1
 
 	private static final String PROP_MOVES = "moves"; // property where to store current moves of Level 1
 
@@ -111,7 +111,7 @@ public class Level1Activity extends GameActivity {
 		if (!_props.containsKey(PROP_BEST)) {
 			// property entry doesn't exist yet, create it
 			_props.setProperty(PROP_BEST, "---");
-			saveProperties();
+			PropertiesHandler.saveProperties(this, _props);
 		}
 		showBestSolution();
 
