@@ -24,7 +24,7 @@ public class Level4Activity extends GameActivity {
 
 	public static final int EXIT_RETURN_CODE = 4714;
 
-	private static final String PROP_BEST = "best4"; // property where to store best solution of Level 4
+	public static final String PROP_BEST = "best4"; // property where to store best solution of Level 4
 
 	private static final String PROP_MOVES = "moves4"; // property where to store current moves of Level 4
 
@@ -159,7 +159,7 @@ public class Level4Activity extends GameActivity {
 		if (!_props.containsKey(PROP_BEST)) {
 			// property entry doesn't exist yet, create it
 			_props.setProperty(PROP_BEST, "---");
-			saveProperties();
+			PropertiesHandler.saveProperties(this, _props);
 		}
 		showBestSolution();
 
