@@ -33,3 +33,4 @@
 
 1.2
 - added level 5 and level 6
+- show best solution in level selection
